[package]
name = "arcstr"
version = "0.2.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2018"
description = "A better reference-counted string type, with zero-cost (allocation-free) support for string literals"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["arc", "refcount", "arc_str", "rc_str", "string"]
categories = ["concurrency", "memory-management", "data-structures", "no-std", "rust-patterns"]
repository = "https://github.com/thomcc/arcstr"
documentation = "https://docs.rs/arcstr"
homepage = "https://github.com/thomcc/arcstr"

[features]
std = []
default = []

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_test = {version = "1", default-features=false}
memoffset = "0.5"

[target.'cfg(loom)'.dev-dependencies]
loom = { version = "0.3" }
