[package]
name = "arcstr"
version = "1.2.0"
rust-version = "1.57.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]
edition = "2021"
description = "A better reference-counted string type, with zero-cost (allocation-free) support for string literals, and reference counted substrings."
license = "Apache-2.0 OR MIT OR Zlib"
readme = "README.md"
keywords = ["arc", "refcount", "arc_str", "rc_str", "string"]
categories = [
    "concurrency",
    "memory-management",
    "data-structures",
    "no-std",
    "rust-patterns",
]
repository = "https://github.com/thomcc/arcstr"
documentation = "https://docs.rs/arcstr"
homepage = "https://github.com/thomcc/arcstr"

[features]
std = []
default = ["substr"]
substr = []
substr-usize-indices = ["substr"]

[dependencies]
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
serde_test = { version = "1", default-features = false }

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7.1"

[package.metadata.docs.rs]
features = ["std", "substr"]
