[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "arcstr-proc_macros"
version = "0.1.0"  # keep in sync with src/proc_macros/Cargo.toml
authors = [
    "Thom Chiovoloni <chiovolonit@gmail.com>",
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com",
]
edition = "2018"
description = "A better reference-counted string type"
license = "Apache-2.0 OR MIT"
readme = "README.md"
keywords = ["arc", "refcount", "arc_str", "rc_str", "string"]
categories = ["concurrency", "memory-management", "data-structures", "no-std", "rust-patterns"]
repository = "https://github.com/thomcc/arcstr"
documentation = "https://docs.rs/arcstr"
homepage = "https://github.com/thomcc/arcstr"
